--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.6",
+        "tailwindcss-plugins": "^0.3.0",
         "vite": "^2.9.11"
     }
 }
