--- a/.env
+++ b/.env
@@ -61,4 +61,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FAKER_LOCALE = id_ID
 FILESYSTEM_DISK = public
 
-
+TOKEN=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
